tools/observability/prometheus-stack/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.${CLUSTERNAME}.${DOMAINNAME}`)
      services:
        - name: prometheus-stack-grafana
          port: 80
          namespace: observability
  tls:
    certResolver: le
